--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@
     animation: zoomInOut 1s ease-in-out infinite;
 }
 body {
-    background-image: linear-gradient(rgba(62, 20, 20, 0.4), rgba(62, 20, 20, 0.4)), url(back.jpg);
+    background-image: linear-gradient(rgba(62, 20, 20, 0.4), rgba(62, 20, 20, 0.4)), url(back.webp);
     background-size: cover;
     background-position: center;
     font-family: Mija;
